RTI, Ombudsman, submitUserData API

--- a/download.html
+++ b/download.html
@@ -94,7 +94,7 @@
 </div> -->
     <script>
         var ModelsList = ['GPT3_5FineTuned', 'GPT3_5', 'GPT4', 'UserInput'];
-        var LetterTypes = ['ATMFraudBank', 'ATMOmbudsman'];
+        var LetterTypes = ['ATMFraudBank', 'ATMOmbudsman', 'RTI'];
 
         for (var i = 0; i < ModelsList.length; i++) {
             var model = ModelsList[i];
